# fmcg-pulse

./: .gitignore  README.md  config.yaml  pyproject.toml  ruff.toml
fmcg_pulse/: catalog.py  decorators.py  generators.py  logging_config.py  readers.py
fmcg_pulse/models/: config.py  data.py
