[project]
name = "fmcg-pulse"
version = "0.1.0"
description = "FMCG retail analytics pipeline"
requires-python = ">=3.13"

dependencies = [
    "polars>=0.20.0",
    "prefect>=2.14.0",
    "faker>=22.0.0",
    "pyyaml>=6.0",
    "python-json-logger>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
]

[tool.setuptools.packages.find]
include = ["fmcg_pulse*"]